// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`remarkDirectiveBlockflowEditor > should transform with steps 1`] = `
"
<div class="directive-blockflow-editor" style="aspect-ratio: undefined; height: 700px; width: 100%">
  <iframe src="https://blockflow.openpatch.org/editor?project=pako%3AeJxljbEKwkAQRH%2FlnPpIIFpdKRb2ChZikVyWuLLJHXcbFUL%2BXdIYwWaKmTe8CcoqBId9ndmb86ghcS2wyM0WDmUcG2FfxhQe5LVYWousFDPcdfreLyQ%2B9AQLpbfC4UgiwbxCknaD2a7kSSmaagUPweid8xJDV8CC%2B7qjH%2FUiq4o4dLB4ckvhb%2BvjDvNt%2FgAlO0NW" allowfullscreen></iframe>
</div>
"
`;

exports[`remarkDirectiveBlockflowEditor > should transform without steps 1`] = `
"
<div class="directive-blockflow-editor" style="aspect-ratio: undefined; height: 700px; width: 100%">
  <iframe src="https://blockflow.openpatch.org/editor?project=pako%3AeJyrVirJLMlJVbJS8q1UCCktyS%2FKTMxR0lEqTjJWslLSLyhNyslM1i8oys9KTS7RA4nWAgC5GBEX" allowfullscreen></iframe>
</div>
"
`;
